--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Site Title</title>
+  <title>Paketti - A Framework / Firmware update for Renoise created by Esa Ruoho a.k.a. Lackluster</title>
   <link rel="stylesheet" href="dark-mode.css">
   <script src="dark-light-toggle.js"></script>
 </head>
@@ -20,8 +20,9 @@
   </div>
   
   <main>
-    <h1>Welcome to Your Documentation Site</h1>
-    <p>This is the main content of your site.</p>
+    <h1>Welcome to Paketti</h1>
+    <p>Paketti is a framework and firmware update for Renoise, created by Esa Ruoho a.k.a. Lackluster.</p>
+    <p>Explore resources, documentation, and updates right here.</p>
   </main>
 </body>
 </html>
